css/style.css
/* ... */
#happiness-text img {
  position: relative;
  height: 5%;
  width: 5%;
}

#practical-guide {
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: center;
  align-content: center;
}

#practical-guide h3 {
  font-size: clamp(15px, 8vw, 90px);

  color: rgba(32, 31, 41, 1);
  font-family: 'NewYork', 'Yeseva One','Century Gothic', 'CenturyGothic', 'Didot', serif;
  letter-spacing: 0.04em;
  line-height: 1em;
}

#HOME-header-text h4 {
  position: relative;
  font-family: 'Raleway';
  font-weight: 400;
  font-size: clamp(12px, 2vw, 20px);
  padding: 5% 0;
  color: rgba(32, 31, 41, 1);
  line-height: 1.2em;
  text-align: right;
}

.bouncing-ball {
  position: absolute;
  right: 10%;
  width: max(20px,2%);
  padding-bottom: max(20px,2%);
  height: 0;
  border-radius: 50%;
  background-color: #B694D3;

  animation: bounce 0.5s;
  animation-direction: alternate;
  animation-timing-function: cubic-bezier(.5,0.05,1,.5);
  animation-iteration-count: infinite;
}

@keyframes bounce {
  from { transform: translate3d(0, 0, 0);     }
  to   { transform: translate3d(0, 300px, 0); }
}

.bouncing-ball-pages {
  position: absolute;
  right: 3%;
  width: max(20px,2%);
  padding-bottom: max(20px,2%);
  height: 0;
  border-radius: 50%;
  background-color: #B694D3;

  animation: bounce 0.5s;
  animation-direction: alternate;
  animation-timing-function: cubic-bezier(.5,0.05,1,.5);
  animation-iteration-count: infinite;
}

@keyframes bounce {
  from { transform: translate3d(0, 0, 0);     }
  to   { transform: translate3d(0, 300px, 0); }
}

/* HEADER */
.header {
  grid-area: header;
  position: relative;
  width: 100%;
  height: 100vh;
  display: flex;
  flex-wrap: wrap;
  padding: 0 5%;
  align-items: center;
  align-content: center;
}

.header-title h6 {
  font-size: clamp(15px, 5vw, 30px);
  line-height: 2em;
  color: #A4A4A4;
}

.header-title h1 {
  font-size: clamp(15px, 12vw, 100px);
  color: rgba(32, 31, 41, 1);
  font-family: 'NewYork', 'Yeseva One','Century Gothic', 'CenturyGothic', 'Didot', serif;
  font-style: normal;
  letter-spacing: 0.04em;
  line-height: 1em;
}

/* CONTENT */
.flex-container {
  grid-area: content;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  align-content: center;


  position: relative;
  width:100%;
  border-radius: 100vh 100vh 0 0;
  background-color: white;
  padding: 5% 5% 0 5%;
}

.flex-container-END {
  grid-area: content;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  align-content: center;


  position: relative;
  width:100%;
  background-color: #1f1f29;
  padding: 5% 5% 0 5%;
}

.flex-fullspan {
  width: 100%;
  padding: 5% 28%;
  justify-content: center;
}

.flex-item {
  width: 50%;
  padding: 5% 5%;
}

.big-heading {
  font-size: clamp(40px, 5vw, 70px);
  color: rgba(32, 31, 41, 1);
  font-family: 'NewYork', 'Yeseva One','Century Gothic', 'CenturyGothic', 'Didot', serif;
  font-style: normal;
  letter-spacing: 0.04em;
  line-height: 1em;
}

.small-heading {
  font-size: clamp(30px, 2.5vw, 60px);
  color: rgba(32, 31, 41, 1);
  font-family: 'NewYork', 'Yeseva One','Century Gothic', 'CenturyGothic', 'Didot', serif;
  font-style;
  letter-spacing: 0.04em;
  line-height: 1.2em;
}

#pronunciation {
  font-size: clamp(20px, 2vw, 40px);
  font-weight: 400;
  color: rgba(32, 31, 41, 1);
  line-height: 2em;
}

#noun {
  font-size: clamp(20px, 2vw, 40px);
  font-style: italic;
  font-weight: 400;
  color: rgba(32, 31, 41, 1);
  line-height: 2em;
}

#innervoice {
  font-weight: 400;
  font-size: clamp(17px, 2vw, 25px);
  color: rgba(32, 31, 41, 1);
  line-height: 1.5em;
  padding: clamp(3% 0, 2vh 0, 5% 0);
  text-align: left;
}

.info-video {
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: 56.25%;
}

.responsive-iframe {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

/* TEXT FADE IN */

.big-heading, .small-heading, .sub-heading, .flex-item p, .flex-fullspan p {
  opacity: 0;
  transition: opacity 250ms ease-in;
}

.big-heading.appear, .small-heading.appear, .sub-heading.appear, .flex-item p.appear, .flex-fullspan p.appear  {
  opacity: 1;
}

/* IMAGE SETTINGS */

.flex-item-img {
  width: 50%;
  padding: 5% 5%;
}

.flex-item-img img {
  border-radius: 2em;
}

figcaption, figcaption a {
  font-size: clamp(12px, 1vw, 15px);
  text-align: center;
}


/* ACTIVITY */
.activity-container {
  grid-area: activity;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  align-content: center;
  position: relative;
  width:100%;
  background: url("../img/papertexture.jpg");
  padding: 0 5%
}

.sub-heading {
  font-size: clamp(30px, 2.2vw, 60px);
  color: rgba(32, 31, 41, 1);
  font-family: 'NewYork', 'Yeseva One','Century Gothic', 'CenturyGothic', 'Didot', serif;
  font-style: normal;
  letter-spacing: 0.04em;
  line-height: 1em;
}

#journaling {
  width: 100%;
  padding-right: clamp(5px, 25%, 500px);
  padding-left: clamp(5px, 25%, 500px);
  justify-content: center;
}

#journaling p {
  font-family: 'Reenie Beanie';
  font-size: clamp(30px, 3vw, 70px);
  line-height: 1.5em;
}

#positive-traits:before {
  font-family: 'Reenie Beanie';
  font-size: clamp(30px, 3vw, 70px);
  content: '';
  animation: animate infinite 8s;
}

@keyframes animate{
  0% {
    content: '(positive trait)';
  }
  20% {
    content: '(positive trait)';
  }
  40% {
    content: 'imaginative';
  }
  60% {
    content: 'disciplined';
  }
  80% {
    content: 'resourceful';
  }
  100% {
    content: 'intelligent';
  }
}

/* ANIMATE VIDEO ON SCROLL */
.sticky-scroll {
  width: 50%;
  padding: 5%;
}

#set-height {
  display: block;
}

#v0 {
  position: -webkit-sticky;
  position: sticky;
  width: 100%;
  bottom: 0;
  right: 0;
  border-radius: 50%;
}
/* ... */

